--- a/index.html
+++ b/index.html
@@ -136,22 +136,17 @@
     <!--Контакты-->
     <footer>
       <a href="/"> WebStudio</a>
-      <ul>
-        <li>
-          <a
-            href="https://google/maps/WysGAYoZjrtnWeG88"
-            target="_blank"
-            rel="noopener noreferrer"
-            >г. Киев, пр-т Леси Украинки, 26</a
-          >
-        </li>
-        <li>
-          <a href="tel:+380991111111">+38 099 111 11 11</a>
-        </li>
-        <li>
-          <a href="mailto:info@example.com" lang="en">info@example.com</a>
-        </li>
-      </ul>
+      <address>
+        <a
+          href="https://google/maps/WysGAYoZjrtnWeG88"
+          target="_blank"
+          rel="noopener noreferrer"
+          >г. Киев, пр-т Леси Украинки, 26<br
+        /></a>
+        <a href="tel:+380991111111">+38 099 111 11 11<br /></a>
+
+        <a href="mailto:info@example.com" lang="en">info@example.com</a>
+      </address>
     </footer>
   </body>
 </html>
