--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
               alt=" Мужчина с бородой в очках"
               width="270"
             />
-            <p>Игорь Демьяненко</p>
+            <h3>Игорь Демьяненко</h3>
             <p lang="en">Product Designer</p>
           </li>
           <li>
@@ -109,7 +109,7 @@
               alt=" Девушка со светлыми волосами в очках "
               width="270"
             />
-            <p>Ольга Репина</p>
+            <h3>Ольга Репина</h3>
             <p lang="en">Frontend Developer</p>
           </li>
           <li>
@@ -118,7 +118,7 @@
               alt="Мужчина улыбается и смотрит в сторону"
               width="270"
             />
-            <p>Николай Тарасов</p>
+            <h3>Николай Тарасов</h3>
             <p lang="en">Marketing</p>
           </li>
           <li>
@@ -127,7 +127,7 @@
               alt="Мужчина с ухмылкой"
               width="270"
             />
-            <p>Михаил Ермаков</p>
+            <h3>Михаил Ермаков</h3>
             <p lang="en">UI Designer</p>
           </li>
         </ul>
